# razer-naga-key-remap

./: Cargo.toml
config/: razer-naga-2014-key-remap.toml
src/: event_mapper.rs  key_map.rs  main.rs  naga.rs
