[package]
name = "razer-naga-2014-key-remap"
version = "0.1.7"
authors = ["Jakub Podeszwik <jakubpodeszwik@gmail.com>"]
license = "MIT"
keywords = ["razer", "naga"]
readme = "README.md"
repository = "https://github.com/jpodeszwik/razer-naga-2014-key-remap"
homepage = "https://github.com/jpodeszwik/razer-naga-2014-key-remap"
description = "This program remaps razer naga 2014 keys into F1..F12 keys in linux operating system."
edition = "2021"

[dependencies]
evdev-rs = "0.6.1"
uinput = "0.1.3"
toml = "0.8.8"
serde = { version = "1.0.194", features = ["derive"] }
